feat: update vscode settings for forge lib

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,10 @@
     {
       "mode": "auto"
     }
-  ]
+  ],
+  "solidity.remappings": [
+    "forge-std/=packages/contracts/lib/forge-std/src/",
+    "@openzeppelin/=packages/contracts/lib/openzeppelin-contracts/",
+    "erc721a/=packages/contracts/lib/ERC721A/"
+  ] 
 }
